# continuous-migration

./: README.md  Setup.hs  Types.hs  continuous-migration.cabal  init-repo.sh
src/: DataMigration.hs  Main.hs  Migrate.hs  Types.hs
