name: continuous-migration
version: 0.1
license: BSD3
maintainer: corentin.dupont@gmail.com
synopsis: 
description: 
category: 
Homepage: 
build-type: Custom
author: Corentin Dupont
 
executable ContinuousMigration
    build-depends: base, 
                   previous-version,
                   cereal,
                   safecopy
    buildable: True
    hs-source-dirs: src
    other-modules: Types, DataMigration
    main-is: Main.hs
    ghc-options: -W -threaded
 
